--- a/similar-products-api/pom.xml
+++ b/similar-products-api/pom.xml
@@ -45,8 +45,13 @@
 
 		<dependency>
 			<groupId>org.mock-server</groupId>
-			<artifactId>mockserver-spring-test-listener</artifactId>
-			<version>5.14.0</version>
+			<artifactId>mockserver-netty</artifactId>
+			<version>3.10.8</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mock-server</groupId>
+			<artifactId>mockserver-client-java</artifactId>
+			<version>3.10.8</version>
 		</dependency>
 
 		<dependency>
