--- a/similar-products-api/src/main/resources/application.yaml
+++ b/similar-products-api/src/main/resources/application.yaml
@@ -2,3 +2,6 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+application:
+  product-info-server-address: http://localhost:3001
+  similar-products-ids-server-address: http://localhost:3001
