--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,8 @@ version: "3.3"
 services:
   similar-products-api:
     container_name: similar-products-api
+    environment:
+      - "SPRING_PROFILES_ACTIVE=docker"
     build:
       context: similar-products-api
       dockerfile: Dockerfile
